--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
    <div class="music-player">
-
+      <h1 class="music-name">Song One</h1>
+      <p class="artist-name">Test</p>
    </div>
 </body>
 </html>
