--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
    <div class="music-player">
       <h1 class="music-name">Song One</h1>
       <p class="artist-name">Test</p>
+
+      <div class="disk">
+         
+      </div>
    </div>
 </body>
 </html>
