--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
       <p class="artist-name">Test</p>
 
       <div class="disk">
-         
+
+      </div>
+
+      <div class="song-slider">
+         <input type="range" value="0" class="seek-bar">
+         <span class="current-time">00:00</span>
+         <span class="song-duration">00:00</span>
+
       </div>
    </div>
 </body>
