--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
          <input type="range" value="0" class="seek-bar">
          <span class="current-time">00:00</span>
          <span class="song-duration">00:00</span>
+      </div>
 
+      <div class="controls">
+         <button class="play-btn">
+            <span></span>
+            <span></span>
+         </button>
       </div>
    </div>
 </body>
