--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </div>
 
       <div class="controls">
-         <button class="play-btn">
+         <button class="play-btn pause">
             <span></span>
             <span></span>
          </button>
