--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
 
       <div class="controls">
+         <button class="btn backward-btn"></button>
          <button class="play-btn pause">
             <span></span>
             <span></span>
