--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
       </div>
 
       <div class="controls">
-         <button class="btn backward-btn"></button>
+         <button class="btn backward-btn"><img src="assets/images/pre.png" alt=""></button>
          <button class="play-btn pause">
             <span></span>
             <span></span>
          </button>
+         <button class="btn backward-btn"><img src="assets/images/nxt.png" alt=""></button>
+
       </div>
    </div>
 </body>
