--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+   <audio src="" id="audio"></audio>
    <div class="music-player">
       <h1 class="music-name">Song One</h1>
       <p class="artist-name">Test</p>
@@ -32,5 +33,6 @@
 
       </div>
    </div>
+   <script src="js/app.js"></script>
 </body>
 </html>
