--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span></span>
             <span></span>
          </button>
-         <button class="btn backward-btn"><img src="assets/images/nxt.png" alt=""></button>
+         <button class="btn forward-btn"><img src="assets/images/nxt.png" alt=""></button>
 
       </div>
    </div>
