--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Faqih Music</title>
-   <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-   <audio src="" id="audio"></audio>
-   <div class="music-player">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Faqih Music</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <audio src="" id="audio"></audio>
+    <div class="music-player">
       <h1 class="music-name">Song One</h1>
       <p class="artist-name">Test</p>
 
-      <div class="disk">
-
-      </div>
+      <div class="disk"></div>
 
       <div class="song-slider">
-         <input type="range" value="0" class="seek-bar">
-         <span class="current-time">00:00</span>
-         <span class="song-duration">00:00</span>
+        <input type="range" value="0" class="seek-bar" />
+        <span class="current-time">00:00</span>
+        <span class="song-duration">00:00</span>
       </div>
 
       <div class="controls">
-         <button class="btn backward-btn"><img src="assets/images/pre.png" alt=""></button>
-         <button class="play-btn pause">
-            <span></span>
-            <span></span>
-         </button>
-         <button class="btn forward-btn"><img src="assets/images/nxt.png" alt=""></button>
-
+        <button class="btn backward-btn">
+          <img src="assets/images/pre.png" alt="" />
+        </button>
+        <button class="play-btn pause">
+          <span></span>
+          <span></span>
+        </button>
+        <button class="btn forward-btn">
+          <img src="assets/images/nxt.png" alt="" />
+        </button>
       </div>
-   </div>
-   <script src="js/data.js"></script>
-   <script src="js/app.js"></script>
-</body>
+    </div>
+    <script src="js/data.js"></script>
+    <script src="js/app.js"></script>
+  </body>
 </html>
