--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Faqih Music</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/root.css" />
   </head>
   <body>
+    <div class="card">
+      <div id="data"></div>
+    </div>
     <audio src="" id="audio"></audio>
     <div class="music-player">
       <h1 class="music-name">Song One</h1>
