--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Faqih Music</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/root.css" />
+    <script src="	https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
   </head>
   <body>
+    <main class="form">
+      <h1>Tambahkan Lagu</h1>
+      <input type="file" id="fileInput" />
+      <button id="uploadButton">upload</button>
+      <form action=""></form>
+    </main>
     <div class="card">
       <div id="data"></div>
     </div>
