--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Faqih Music</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/root.css" />
+    <link rel="stylesheet" href="css/form.css" />
     <script src="	https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
   </head>
   <body>
@@ -14,7 +15,6 @@
       <h1>Tambahkan Lagu</h1>
       <input type="file" id="fileInput" />
       <button id="uploadButton">upload</button>
-      <form action=""></form>
     </main>
     <div class="card">
       <div id="data"></div>
@@ -45,6 +45,7 @@
         </button>
       </div>
     </div>
+    <script src="js/form.js"></script>
     <script src="js/data.js"></script>
     <script src="js/app.js"></script>
   </body>
