--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="	https://unpkg.com/axios@0.24.0/dist/axios.min.js"></script>
   </head>
   <body>
-    <main class="form">
+    <!-- <main class="form">
       <h1>Tambahkan Lagu</h1>
       <input type="file" id="fileInput" />
       <button id="uploadButton">upload</button>
-    </main>
+    </main> -->
     <div class="card">
       <div id="data"></div>
     </div>
